--- a/requirements.txt
+++ b/requirements.txt
@@ -8,22 +8,16 @@ annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
 anyio==4.8.0
 appdirs==1.4.4
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
 arrow==1.3.0
 asttokens==3.0.0
 astunparse==1.6.3
-async-lru==2.0.4
 asyncssh==2.19.0
 atpublic==5.1
 attrs==25.1.0
 audioread==3.0.1
 audiotsm==0.1.2
-babel==2.17.0
 bcrypt==4.2.1
-beautifulsoup4==4.13.2
 billiard==4.2.1
-bleach==6.2.0
 celery==5.4.0
 certifi==2025.1.31
 cffi==1.17.1
@@ -39,9 +33,7 @@ configobj==5.0.9
 contourpy==1.3.1
 cryptography==44.0.0
 cycler==0.12.1
-debugpy==1.8.12
 decorator==5.1.1
-defusedxml==0.7.1
 dictdiffer==0.9.0
 diskcache==5.6.3
 distro==1.9.0
@@ -59,7 +51,6 @@ dvc-task==0.40.2
 dvc-webdav==3.0.0
 entrypoints==0.4
 executing==2.2.0
-fastjsonschema==2.21.1
 ffmpeg==1.4
 filelock==3.17.0
 flatbuffers==25.1.24
@@ -83,27 +74,13 @@ httpcore==1.0.7
 httpx==0.28.1
 hydra-core==1.3.2
 idna==3.10
-ipykernel==6.29.5
 ipython==8.32.0
 ipywidgets==8.1.5
 isoduration==20.11.0
 iterative-telemetry==0.0.9
 jedi==0.19.2
-Jinja2==3.1.5
 joblib==1.4.2
-json5==0.10.0
 jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter-events==0.12.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.15.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.3.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
 keras==3.8.0
 keras-tuner==1.4.7
@@ -120,48 +97,26 @@ MarkupSafe==3.0.2
 matplotlib==3.10.0
 matplotlib-inline==0.1.7
 mdurl==0.1.2
-mistune==3.1.1
 ml-dtypes==0.4.1
-mpmath==1.3.0
 msgpack==1.1.0
 multidict==6.1.0
 namex==0.0.8
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
 networkx==3.4.2
-notebook_shim==0.2.4
 numba==0.61.0
 numpy==2.0.2
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-cusparselt-cu12==0.6.2
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
 omegaconf==2.3.0
 opt_einsum==3.4.0
 optree==0.14.0
 orjson==3.10.15
-overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
-pandocfilters==1.5.1
 parso==0.8.4
 pathspec==0.12.1
 pexpect==4.9.0
 pillow==11.1.0
+pip-autoremove==0.10.0
 platformdirs==4.3.6
 pooch==1.8.2
-prometheus_client==0.21.1
 prompt_toolkit==3.0.50
 propcache==0.2.1
 protobuf==5.29.3
@@ -178,23 +133,16 @@ Pygments==2.19.1
 pygtrie==2.5.0
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
-python-json-logger==3.2.1
 pytz==2025.1
 PyYAML==6.0.2
-pyzmq==26.2.1
-referencing==0.36.2
 requests==2.32.3
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
 rich==13.9.4
-rpds-py==0.22.3
 ruamel.yaml==0.18.10
 ruamel.yaml.clib==0.2.12
 scikit-learn==1.6.1
 scipy==1.15.1
 scmrepo==3.3.10
 semver==3.0.4
-Send2Trash==1.8.3
 setuptools==75.8.0
 shellingham==1.5.4
 shortuuid==1.0.13
@@ -203,27 +151,21 @@ six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 soundfile==0.13.1
-soupsieve==2.6
 soxr==0.5.0.post1
 sqltrie==0.11.1
 sshfs==2024.9.0
 stack-data==0.6.3
-sympy==1.13.1
 tabulate==0.9.0
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
 tensorflow==2.18.0
 tensorflow-probability==0.25.0
 termcolor==2.5.0
-terminado==0.18.1
 threadpoolctl==3.5.0
 tinycss2==1.4.0
 tomlkit==0.13.2
-torch==2.6.0
-tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
-triton==3.2.0
 typer==0.15.1
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
@@ -237,7 +179,6 @@ webcolors==24.11.1
 webdav4==0.10.0
 webencodings==0.5.1
 webrtcvad==2.0.10
-websocket-client==1.8.0
 Werkzeug==3.1.3
 wheel==0.45.1
 widgetsnbextension==4.0.13
