test training with smaller test dataset in data/test

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -2,7 +2,7 @@ stages:
   train:
     cmd: python source/train.py
     deps:
-    - data/processed/
+    - data/test/
     - source/train.py
     - source/model.py
     - source/preprocess.py
