--- a/requirements.txt
+++ b/requirements.txt
@@ -104,6 +104,18 @@ namex==0.0.8
 networkx==3.4.2
 numba==0.61.0
 numpy==1.26.4
+nvidia-cublas-cu12==12.3.4.1
+nvidia-cuda-cupti-cu12==12.3.101
+nvidia-cuda-nvcc-cu12==12.3.107
+nvidia-cuda-nvrtc-cu12==12.3.107
+nvidia-cuda-runtime-cu12==12.3.101
+nvidia-cudnn-cu12==8.9.7.29
+nvidia-cufft-cu12==11.0.12.1
+nvidia-curand-cu12==10.3.4.107
+nvidia-cusolver-cu12==11.5.4.101
+nvidia-cusparse-cu12==12.2.0.103
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.3.101
 omegaconf==2.3.0
 opt_einsum==3.4.0
 optree==0.14.0
@@ -160,6 +172,7 @@ tensorboard==2.16.1
 tensorboard-data-server==0.7.2
 tensorflow==2.16.1
 termcolor==2.5.0
+tf_keras==2.16.0
 threadpoolctl==3.5.0
 tinycss2==1.4.0
 tomlkit==0.13.2
