--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 absl-py==2.1.0
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
 aiohttp-retry==2.9.1
 aiosignal==1.3.2
 amqp==5.3.1
@@ -8,16 +8,12 @@ annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
 anyio==4.8.0
 appdirs==1.4.4
-arrow==1.3.0
-asttokens==3.0.0
 astunparse==1.6.3
 asyncssh==2.19.0
 atpublic==5.1
 attrs==25.1.0
-audioread==3.0.1
-audiotsm==0.1.2
-bcrypt==4.2.1
 billiard==4.2.1
+cachetools==5.5.1
 celery==5.4.0
 certifi==2025.1.31
 cffi==1.17.1
@@ -26,18 +22,12 @@ click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
-cloudpickle==3.1.1
 colorama==0.4.6
-comm==0.2.2
 configobj==5.0.9
-contourpy==1.3.1
-cryptography==44.0.0
-cycler==0.12.1
-decorator==5.1.1
+cryptography==44.0.1
 dictdiffer==0.9.0
 diskcache==5.6.3
 distro==1.9.0
-dm-tree==0.1.9
 dpath==2.2.0
 dulwich==0.22.7
 dvc==3.59.0
@@ -45,25 +35,22 @@ dvc-data==3.16.9
 dvc-http==2.32.0
 dvc-objects==5.1.0
 dvc-render==1.0.2
-dvc-ssh==4.1.1
 dvc-studio-client==0.21.0
 dvc-task==0.40.2
 dvc-webdav==3.0.0
 entrypoints==0.4
-executing==2.2.0
-ffmpeg==1.4
 filelock==3.17.0
-flatbuffers==25.1.24
+flatbuffers==25.2.10
 flatten-dict==0.4.2
 flufl.lock==8.1.0
-fonttools==4.55.8
-fqdn==1.5.1
 frozenlist==1.5.0
 fsspec==2025.2.0
 funcy==2.0
 gast==0.6.0
 gitdb==4.0.12
 GitPython==3.1.44
+google-auth==2.38.0
+google-auth-oauthlib==1.2.1
 google-pasta==0.2.0
 grandalf==0.8
 grpcio==1.70.0
@@ -74,126 +61,78 @@ httpcore==1.0.7
 httpx==0.28.1
 hydra-core==1.3.2
 idna==3.10
-ipython==8.32.0
-ipywidgets==8.1.5
-isoduration==20.11.0
-iterative-telemetry==0.0.9
-jedi==0.19.2
+iterative-telemetry==0.0.10
 joblib==1.4.2
-jsonpointer==3.0.0
-jupyterlab_widgets==3.0.13
-keras==3.8.0
-keras-tuner==1.4.7
-kiwisolver==1.4.8
+keras==2.15.0
 kombu==5.4.2
-kt-legacy==1.0.5
-lazy_loader==0.4
 libclang==18.1.1
-librosa==0.10.2.post1
-llvmlite==0.44.0
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib==3.10.0
-matplotlib-inline==0.1.7
 mdurl==0.1.2
-ml-dtypes==0.3.2
-msgpack==1.1.0
+ml-dtypes==0.2.0
 multidict==6.1.0
-namex==0.0.8
 networkx==3.4.2
-numba==0.61.0
 numpy==1.26.4
-nvidia-cublas-cu12==12.3.4.1
-nvidia-cuda-cupti-cu12==12.3.101
-nvidia-cuda-nvcc-cu12==12.3.107
-nvidia-cuda-nvrtc-cu12==12.3.107
-nvidia-cuda-runtime-cu12==12.3.101
-nvidia-cudnn-cu12==8.9.7.29
-nvidia-cufft-cu12==11.0.12.1
-nvidia-curand-cu12==10.3.4.107
-nvidia-cusolver-cu12==11.5.4.101
-nvidia-cusparse-cu12==12.2.0.103
-nvidia-nccl-cu12==2.19.3
-nvidia-nvjitlink-cu12==12.3.101
+oauthlib==3.2.2
 omegaconf==2.3.0
 opt_einsum==3.4.0
-optree==0.14.0
 orjson==3.10.15
 packaging==24.2
-pandas==2.2.3
-parso==0.8.4
 pathspec==0.12.1
-pexpect==4.9.0
-pillow==11.1.0
-pip-autoremove==0.10.0
 platformdirs==4.3.6
-pooch==1.8.2
 prompt_toolkit==3.0.50
 propcache==0.2.1
 protobuf==4.25.6
 psutil==6.1.1
-ptyprocess==0.7.0
-pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
 pydot==3.0.4
-pydub==0.25.1
 pygit2==1.17.0
 Pygments==2.19.1
 pygtrie==2.5.0
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
-pytz==2025.1
 PyYAML==6.0.2
 requests==2.32.3
+requests-oauthlib==2.0.0
 rich==13.9.4
+rsa==4.9
 ruamel.yaml==0.18.10
 ruamel.yaml.clib==0.2.12
 scikit-learn==1.6.1
 scipy==1.15.1
 scmrepo==3.3.10
 semver==3.0.4
-setuptools==75.8.0
 shellingham==1.5.4
 shortuuid==1.0.13
 shtab==1.7.1
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
-soundfile==0.13.1
-soxr==0.5.0.post1
 sqltrie==0.11.1
-sshfs==2024.9.0
-stack-data==0.6.3
 tabulate==0.9.0
-tensorboard==2.16.1
+tensorboard==2.15.2
 tensorboard-data-server==0.7.2
-tensorflow==2.16.1
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.5.0
-tf_keras==2.16.0
 threadpoolctl==3.5.0
-tinycss2==1.4.0
 tomlkit==0.13.2
 tqdm==4.67.1
-traitlets==5.14.3
 typer==0.15.1
-types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
 tzdata==2025.1
-uri-template==1.3.0
 urllib3==2.3.0
 vine==5.1.0
 voluptuous==0.15.2
 wcwidth==0.2.13
-webcolors==24.11.1
 webdav4==0.10.0
-webencodings==0.5.1
-webrtcvad==2.0.10
 Werkzeug==3.1.3
-wheel==0.45.1
-widgetsnbextension==4.0.13
-wrapt==1.17.2
+wrapt==1.14.1
 yarl==1.18.3
 zc.lockfile==3.0.post1
