dvc: commit experiment c6384a970eade22080f3740d1f2d9f0bfa3ec8a193f45588dae49fa1b918fc3b

--- a/.dvc/config
+++ b/.dvc/config
@@ -3,6 +3,6 @@
 [cache]
     shared = group
     type = symlink
-    dir = cache
+    dir = /scratch/rschweikert/audiobook-noise-detection/.dvc/cache
 ['remote "myremote"']
     url = webdavs://tubcloud.tu-berlin.de/remote.php/dav/files/6162a6c0-823c-1039-8d2f-510a35d2f935
