pytorch instead of tf, new docker image, new code

--- a/params.yaml
+++ b/params.yaml
@@ -5,6 +5,7 @@ preprocess:
 model:
   conv2d_dilation: 1
 train:
+  device_request: 'cuda'
   batch_size: 8
   learning_rate: 0.0005
-  epochs: 1
+  epochs: 5
