--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,16 @@
 absl-py==2.1.0
-aiohappyeyeballs==2.4.6
-aiohttp==3.11.12
+aiohappyeyeballs==2.5.0
+aiohttp==3.11.13
 aiohttp-retry==2.9.1
 aiosignal==1.3.2
 amqp==5.3.1
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
-anyio==4.8.0
 appdirs==1.4.4
-astunparse==1.6.3
-asyncssh==2.19.0
+asyncssh==2.20.0
 atpublic==5.1
 attrs==25.1.0
 billiard==4.2.1
-cachetools==5.5.1
 celery==5.4.0
 certifi==2025.1.31
 cffi==1.17.1
@@ -24,69 +21,68 @@ click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
 configobj==5.0.9
-cryptography==44.0.1
+cryptography==44.0.2
 dictdiffer==0.9.0
 diskcache==5.6.3
 distro==1.9.0
 dpath==2.2.0
-dulwich==0.22.7
-dvc==3.59.0
+dulwich==0.22.8
+dvc==3.59.1
 dvc-data==3.16.9
 dvc-http==2.32.0
 dvc-objects==5.1.0
 dvc-render==1.0.2
 dvc-studio-client==0.21.0
 dvc-task==0.40.2
-dvc-webdav==3.0.0
 entrypoints==0.4
 filelock==3.17.0
-flatbuffers==25.2.10
 flatten-dict==0.4.2
 flufl.lock==8.1.0
 frozenlist==1.5.0
 fsspec==2025.2.0
 funcy==2.0
-gast==0.6.0
 gitdb==4.0.12
 GitPython==3.1.44
-google-auth==2.38.0
-google-auth-oauthlib==1.2.1
-google-pasta==0.2.0
 grandalf==0.8
 grpcio==1.70.0
 gto==1.7.2
-h11==0.14.0
-h5py==3.12.1
-httpcore==1.0.7
-httpx==0.28.1
+h5py==3.13.0
 hydra-core==1.3.2
 idna==3.10
 iterative-telemetry==0.0.10
+Jinja2==3.1.6
 joblib==1.4.2
-keras==2.15.0
 kombu==5.4.2
-libclang==18.1.1
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
-ml-dtypes==0.2.0
+mpmath==1.3.0
 multidict==6.1.0
 networkx==3.4.2
-numpy==1.26.4
-oauthlib==3.2.2
+numpy==2.2.3
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 omegaconf==2.3.0
-opt_einsum==3.4.0
 orjson==3.10.15
 packaging==24.2
 pathspec==0.12.1
 platformdirs==4.3.6
 prompt_toolkit==3.0.50
-propcache==0.2.1
-protobuf==4.25.6
-psutil==6.1.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
+propcache==0.3.0
+protobuf==6.30.0
+psutil==7.0.0
 pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
@@ -98,13 +94,11 @@ pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 PyYAML==6.0.2
 requests==2.32.3
-requests-oauthlib==2.0.0
 rich==13.9.4
-rsa==4.9
 ruamel.yaml==0.18.10
 ruamel.yaml.clib==0.2.12
 scikit-learn==1.6.1
-scipy==1.15.1
+scipy==1.15.2
 scmrepo==3.3.10
 semver==3.0.4
 shellingham==1.5.4
@@ -112,27 +106,24 @@ shortuuid==1.0.13
 shtab==1.7.1
 six==1.17.0
 smmap==5.0.2
-sniffio==1.3.1
-sqltrie==0.11.1
+sqltrie==0.11.2
+sympy==1.13.1
 tabulate==0.9.0
-tensorboard==2.15.2
+tensorboard==2.19.0
 tensorboard-data-server==0.7.2
-tensorflow==2.15.0
-tensorflow-estimator==2.15.0
-tensorflow-io-gcs-filesystem==0.37.1
-termcolor==2.5.0
 threadpoolctl==3.5.0
 tomlkit==0.13.2
+torch==2.6.0
+torchinfo==1.8.0
 tqdm==4.67.1
-typer==0.15.1
+triton==3.2.0
+typer==0.15.2
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
 vine==5.1.0
 voluptuous==0.15.2
 wcwidth==0.2.13
-webdav4==0.10.0
 Werkzeug==3.1.3
-wrapt==1.14.1
 yarl==1.18.3
 zc.lockfile==3.0.post1
