--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ aiosignal==1.3.2
 amqp==5.3.1
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
+anyio==4.8.0
 appdirs==1.4.4
 asyncssh==2.20.0
 atpublic==5.1
@@ -34,6 +35,7 @@ dvc-objects==5.1.0
 dvc-render==1.0.2
 dvc-studio-client==0.21.0
 dvc-task==0.40.2
+dvc-webdav==3.0.0
 entrypoints==0.4
 filelock==3.17.0
 flatten-dict==0.4.2
@@ -46,7 +48,10 @@ GitPython==3.1.44
 grandalf==0.8
 grpcio==1.70.0
 gto==1.7.2
+h11==0.14.0
 h5py==3.13.0
+httpcore==1.0.7
+httpx==0.28.1
 hydra-core==1.3.2
 idna==3.10
 iterative-telemetry==0.0.10
@@ -106,6 +111,7 @@ shortuuid==1.0.13
 shtab==1.7.1
 six==1.17.0
 smmap==5.0.2
+sniffio==1.3.1
 sqltrie==0.11.2
 sympy==1.13.1
 tabulate==0.9.0
@@ -124,6 +130,7 @@ urllib3==2.3.0
 vine==5.1.0
 voluptuous==0.15.2
 wcwidth==0.2.13
+webdav4==0.10.0
 Werkzeug==3.1.3
 yarl==1.18.3
 zc.lockfile==3.0.post1
