added savelogs to dvc.yaml, sending acc+5 f1 scores to TB, implemented class balancing, removed training progress bars, added early stopping, dataset split by audiobooks

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -12,3 +12,9 @@ stages:
     - train.epochs
     outs:
     - models
+  save_logs:
+    cmd: python source/utils/logs.py
+    deps:
+    - source/utils/logs.py
+    outs:
+    - exp_logs/
