--- a/params.yaml
+++ b/params.yaml
@@ -1,11 +1,12 @@
 general:
   random_seed: 42
 preprocess:
-  test_split: 0.2
+  min_split_ratio: 0.75
 model:
   conv2d_dilation: 1
 train:
   device_request: 'cuda'
   batch_size: 8
   learning_rate: 0.0005
-  epochs: 5
+  epochs: 10
+  early_stopping_patience: 5
