--- a/params.yaml
+++ b/params.yaml
@@ -5,9 +5,9 @@ preprocess:
 model:
   conv2d_dilation: 1
 train:
-  device_request: 'cuda'
+  device_request: cuda
   batch_size: 128
-  learning_rate: 0.0005
+  learning_rate: 5e-05
   epochs: 10
   early_stopping_patience: 5
-  weight_scaling: 0.9
+  weight_scaling: 0.5
